<resources>
    <string name="app_name">History Manager</string>
    <string name="cntdesc">image</string>

    <!-- IntroPage -->
    <string name="tutorialchkbox">Do you want to see tutorial?</string>
    <string name="introguide">Touch to continue</string>
    <string name="introguide2">Touch \"+\" to create new item</string>
    <string name="cntdescfab">button</string>
    <string name="item_title">Title</string>
    <string name="item_desc">description</string>
    <string name="dial_category_title">Create New Category</string>
    <string name="dial_category_hint1">Name of the category</string>
    <string name="button_confirm">Confirm</string>
    <string name="dial_category_hint2">Description of the new category</string>
</resources>